# cartograph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: demo.html  index.html
docs/specs/: cicd-integration.md  coverage-overlay.md  github-pr-bot.md  policy-engine.md  predictive-regression.md
docs/superpowers/plans/: 2026-03-15-typescript-parser.md
docs/superpowers/specs/: 2026-03-15-typescript-parser-design.md
fixtures/sample_mixed_repo/src/: index.ts  lib.rs
fixtures/sample_repo/src/: auth.rs  billing.rs  main.rs
fixtures/sample_ts_repo/src/: external.ts  main.ts  types.ts  utils.ts
scripts/: test_commits.py  viz.py
src/: lib.rs  main.rs
src/coverage/: mod.rs  overlay.rs  parser.rs  store.rs
src/historian/: cochange.rs  commits.rs  mod.rs  ownership.rs
src/integrations/: mod.rs
src/parser/: mod.rs  rust.rs  typescript.rs
src/policy/: engine.rs  mod.rs  report.rs  rules.rs
src/prediction/: mod.rs  scoring.rs  signals.rs
src/query/: blast_radius.rs  hotspots.rs  mod.rs  ownership.rs
src/server/: mod.rs  tools.rs
src/store/: graph.rs  mod.rs  schema.rs
tests/: e2e_test.rs
viz/: index.html  package-lock.json  package.json
viz/public/: data.json
viz/src/: colors.js  data.js  edges.js  filters.js  interaction.js  layout.js  main.js  modes.js  nodes.js  particles.js  renderer.js  scrubber.js  tour.js  ui.js
(+8 files in other folders)
