[package]
name = "cartograph"
version = "0.1.0"
edition = "2024"
description = "Codebase world model — maps, understands, and predicts complex software systems"
license = "Apache-2.0"
repository = "https://github.com/emberloom/cartograph"

[dependencies]
# Storage
rusqlite = { version = "0.32", features = ["bundled-full"] }
petgraph = "0.7"

# AST parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tree-sitter-typescript = "0.23.2"
serde_yaml_ng = "0.10.0"
